@@ -1,25 +1,34 @@
 package com.springlearning.global.security.dto;
 
+import com.springlearning.domain.member.entity.type.Role;
+import lombok.Builder;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
+@Getter
+@Builder
 public class OAuth2LoginDto implements OAuth2User {
+
+    private String username;
+
+    private Role role;
+
     @Override
     public Map<String, Object> getAttributes() {
-        return Map.of();
+        return Map.of("email", this.username);
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority(role.name()));
     }
 
     @Override
     public String getName() {
-        return "";
+        return this.username;
     }
 }
